--- a/style.css
+++ b/style.css
@@ -308,6 +308,8 @@ body{
 
 .detailImage{
     position: relative;
+    display: flex;
+    align-items: center;
 }
 
 .detailImage i{
@@ -390,7 +392,7 @@ body{
     height: 110vh;
     display: grid;
     color: white;
-    background-color: #59b76e;
+    background-color: #F16A3A;
     padding-bottom: 1em;
     grid-template-rows: 1.2fr 5fr;
     grid-template-columns: auto auto auto;
@@ -554,12 +556,13 @@ body{
     display: grid;
 }
 .logo img{
+    width: 15vw;
     justify-self: center;
     align-self: center;
 }
 .logo div{
     justify-self: center;
-    margin: -2em;
+    margin: -1em;
 }
 .logo div a{
     color: white;
