--- a/style.css
+++ b/style.css
@@ -531,7 +531,15 @@ body{
 
 
 
+/* Prize Details */
+.prizeDetails{
+    height: auto;
+    width: 100vw;
+    background-color: #F16A3A;
+    padding: 2em;
 
+    color: white;
+}
 
 
 
