--- a/style.css
+++ b/style.css
@@ -312,6 +312,10 @@ body{
     align-items: center;
 }
 
+.detailImage img{
+    width: 40vw;
+}
+
 .detailImage i{
     font-size: 20vw;
     position: absolute;
@@ -539,6 +543,10 @@ body{
     padding: 2em;
 
     color: white;
+}
+.prizeDetails li{
+    padding: 0.3vw;
+    font-size: 1.5vw;
 }
 
 
@@ -836,11 +844,12 @@ body{
             "content"
     }
     .bottomHead h1{
-        font-size: 10vw;
+        font-size: 8vw;
     }
     .bottomImage{
         margin-top: 2em;
         padding: 0 2em;
+        /* background-color: green; */
     }
     .bottomImage div {
         padding: 0;
@@ -848,7 +857,12 @@ body{
     .bottomContent{
         height: auto;
         padding: 2em 2em;
-        font-size: 22px;
+        /* background-color: tomato; */
+    }
+    .bottomContent div img{
+        width: 50vw;
+        height: 20vh
+
     }
 
 
@@ -880,6 +894,12 @@ body{
     .contactDiv .person {
         width: 50%;
         margin-bottom: 2em;
+    }
+
+
+    /* Prize Details */
+    .prizeDetails li{
+        font-size: 2.7vw;
     }
 
 
