--- a/style.css
+++ b/style.css
@@ -723,8 +723,13 @@ body{
     
     /* NavBar */
     #nav ul{
-        background-color: white;
-        margin: 0;
+        /* background-color: tomato; */
+        display: flex;
+        justify-content: space-evenly;
+    }
+
+    #nav{
+        height: auto;
     }
 
     #nav li a{
