--- a/style.css
+++ b/style.css
@@ -180,6 +180,11 @@ body{
     font-size: 1.6vw; 
 }
 
+.ltext{
+    font-size: 35px;
+    color: white;
+}
+
 .content button{
     margin-top: 1.7em;
     font-size: 1.4vw;
@@ -285,7 +290,8 @@ body{
     height: auto;
     display: grid;
     grid-template-columns: auto auto;
-    background-color: #F16A3A;
+    /* background-color: rgb(255, 116, 61); */
+    background-image: linear-gradient(to bottom right, rgb(233, 77, 4),rgb(255, 139, 61))
 }
 
 .details{
