--- a/style.css
+++ b/style.css
@@ -181,7 +181,7 @@ body{
 }
 
 .ltext{
-    font-size: 35px;
+    font-size: 2.5vw;
     color: white;
 }
 
@@ -230,29 +230,25 @@ body{
     /* background-color: teal; */
     grid-area: box2;
     display: grid;
+    text-align: center
 }
-.midImage i{
+.midImagecontent i{
     font-size: 7vw;
     justify-self: center;
     align-self: center;
+    margin-bottom: 0.2em;
     color: #F16A3A;
 }
 #midImagecontent{
-    justify-self: center;
     align-self: center;
-    line-height: 1px;
-    margin-top: 2.5em;
-    text-align: center;
+    justify-self: center;
+    line-height: 1.5em;
+    font-size: 2vw;
+    display: grid;
 }
-#midImagecontent h1{
-    margin-top: 0.3em;
-    color: #333;
-}
-#midImagecontent h6 {
-    margin-top: -0.6em;
-}
-.midImage span{
-    font-size: 2em;
+#imageline2{
+    font-size: 2.5em;
+    font-weight: 500;
 }
 
 .midAddress{
@@ -667,25 +663,41 @@ body{
 .contactDiv .person {
     display: inline-block;
     width: 25%;
-    margin: 0 1em;
-    border-radius: 5px;
+    margin: 2em 3em;
+    padding: 2.5vw;
+    /* border-radius: 5px;
     border: 1px solid lightgrey;
+    text-align: center;      */
 }
 .contactDiv .person .photo {
+    /* width: 200px;
+    height: 200px; */
+    position: relative;
     overflow: hidden;
+    border-radius: 50%;
+    margin-left: auto;
+    margin-right: auto;
 }
 .contactDiv .person .photo img {
     width: 100%;
 }
 .contactDiv .person .text {
+    margin-left: auto;
+    margin-right: auto;
     text-align: left;
-    padding: 1em;
+    font-size: 1.2em;
+    padding-top: 1em;
     overflow: hidden;
     text-overflow: ellipsis;
 }
 .contactDiv .person .text a {
     color: #3f9c3f;
+    font-size: 1em;
 }
+.contactDiv .person .text span {
+    font-size: 1.2em;
+}
+
 
 .logosContainer {
     display: none;
@@ -816,18 +828,6 @@ body{
         align-self: center;
         justify-self: center;
     }
-    .midImage i{
-        font-size: 4em;
-    }
-    #midAddresscontent{
-        font-size: 1em;
-        align-self: flex-start;
-    }
-    #midAddresscontent i{
-        font-size: 4em;
-        margin-bottom: 0.5em;
-    }
-
 
     /* Details Div */
     .details{
