--- a/style.css
+++ b/style.css
@@ -1,11 +1,8 @@
-html {
-    overflow: hidden;
+html{
+    overflow-x: hidden;
     height: 100%;
 }
 body{
-
-    height: 100%;
-    overflow: auto;
     margin: 0;
     padding: 0;
     overflow-x: hidden;
@@ -196,6 +193,11 @@ body{
     color: white;
 }
 
+.ltext2{
+    font-size: 1.5vw;
+    color: white;
+}
+
 .content button{
     margin-top: 1.7em;
     font-size: 1.4vw;
@@ -235,7 +237,7 @@ body{
     /* background-color: tomato; */
     grid-area: box1;
     padding: 2em 5em;
-    line-height: 2.3em;
+    line-height: 1.4em;
     font-size: 35px;
     color: #333;
 }
@@ -729,6 +731,7 @@ body{
         background-color: rgb(25,25,25);
         padding: 1em 0;
         text-align: center;
+        width: 100%;
     }
     .logosContainer img.paytm {
         background-color: white;
@@ -736,8 +739,8 @@ body{
     }
     .logosContainer img {
         height: 5em;
-        padding: 5px 9px;
-        margin: 1em;
+        padding: 8px 8px;
+        margin: 8px;
     }
 
     .blackNav {
@@ -768,19 +771,20 @@ body{
     }
 
     #nav li a{
-        font-size: 10px;
+        font-size: 12px;
         padding: 15px 5px;
     }
 
 
     /* Top Container */
     .topContainer{
-        height: auto !important;
+        height: auto;
     }
     .topContainer img{
-        height: 80%;
+        height: 100%;
+        width: 100%;
     }
-    
+
     .whiteCircle{
         /* height: 25%;
         width: 32%;
@@ -871,6 +875,7 @@ body{
     }
     #midImagecontentI{
         padding-left: 1.2em;
+        padding-right: 0.4em;
         grid-area: pic; 
         font-size: 5em;
         color: #F16A3A;
@@ -886,6 +891,7 @@ body{
     }
     #midAddresscontentI{
         padding-right: 1.2em;
+        padding-right: 0.4em;
         grid-area: pic; 
         font-size: 5em;
         color: #F16A3A;
@@ -914,6 +920,10 @@ body{
         padding-bottom: 2vw;
     }
     .ltext{
+        font-size: 4vw;
+        color: white;
+    }
+    .ltext2{
         font-size: 4vw;
         color: white;
     }
@@ -1040,8 +1050,8 @@ body{
         display: block;
     }
     .logo div a{
-        font-size: 10px;
-        padding: 0 4px;
+        font-size: 1.2em;
+        padding: 0 8px;
     }
     .footerIbeto img{
         height: 3em;
