--- a/style.css
+++ b/style.css
@@ -848,12 +848,13 @@ body{
         display: grid;
         margin-bottom: 4em;
         grid-template-rows: auto;
-        grid-template-columns: auto auto auto;
-        grid-template-areas: 
+        grid-template-columns: auto auto auto auto;
+        grid-template-areas:
             "box1"
             "box2"
             "box3";
     }
+
     .midContent{
         grid-area: box1;
         padding: 4px 1.5em;
@@ -872,18 +873,24 @@ body{
         grid-template-areas: 
             "pic txt";
         margin: 3em 1em;
+        margin-left: 0%;
+        justify-content: left;
     }
     #midImagecontent{
+        position: relative;
+        float:left;
         font-size: 1.6em;
         text-align: left; 
         grid-area: txt;  
-        padding-right: 1.6em;
     }
     #midImagecontentI{
+        
+        position: relative;
+        float:left;
         padding-left: 1.2em;
         padding-right: 0.4em;
         grid-area: pic; 
-        font-size: 5em;
+        font-size: 4.0em;
         color: #F16A3A;
         vertical-align: middle; 
     }
@@ -893,9 +900,12 @@ body{
         grid-template-columns: auto;
         grid-template-areas: 
             "txt pic";
-            margin: 2em 1em;     
+            margin: 2em 1em; 
+            justify-content: right;    
     }
     #midAddresscontentI{
+        position: relative;
+        float: right;
         padding-right: 1.2em;
         padding-right: 0.4em;
         grid-area: pic; 
@@ -905,7 +915,9 @@ body{
     }
     
     #midAddresscontent{
-        padding-left: 1.6em;
+        margin-right: 1em;
+        position: relative;
+        float: right;
         font-size: 1.6em;
         text-align: right; 
         line-height: normal; 
