--- a/style.css
+++ b/style.css
@@ -736,6 +736,10 @@ body{
     display: none;
 }
 
+.contactDiv .person .text i{
+    transform: scaleX(-1);
+}
+
 
 
 /* Responsive - Mobile View */
@@ -888,14 +892,15 @@ body{
         grid-template-columns: auto;
         grid-template-areas: 
             "pic txt";
-        margin: 3em 1em;
+        margin-top: 2em;
+        margin-bottom: 2em;
         margin-left: 0%;
         justify-content: left;
     }
     #midImagecontent{
         position: relative;
         float:left;
-        font-size: 1.6em;
+        font-size: 4vw;
         text-align: left; 
         grid-area: txt;  
 
@@ -920,7 +925,8 @@ body{
         grid-template-columns: auto;
         grid-template-areas: 
             "pic txt";
-        margin: 3em 1em;
+        margin-top: 1em;
+        margin-bottom: 2em;
         margin-left: 0%;
         justify-content: left;   
     }
@@ -940,7 +946,7 @@ body{
     #midAddresscontent{
         position: relative;
         float:left;
-        font-size: 1.6em;
+        font-size: 4vw;
         text-align: left; 
         grid-area: txt;  
 
@@ -1060,6 +1066,8 @@ body{
         display: inline-block;
         font-size: 3.5vw;   
     }
+
+    
 
     .contactDiv .person .photo{
         display: inline-block;
