--- a/style.css
+++ b/style.css
@@ -47,16 +47,15 @@ body{
     height: 5em;
     background-color: rgb(29, 29, 29);
     transform: skewX(-20deg);
-    padding-left: 3vw; 
 }
 
 .blackNav img {
+    margin-left: 3vw; 
     transform: skewX(20deg);
     position: relative;
     left: 13%;
     top: 10%;
     height: 4em;
-    width: 9    em;
 }
 
 
@@ -778,10 +777,11 @@ body{
     }
 
     .blackNav img {
-        height: 2.5em;
+        margin-left: 0;
+        height: 3.5em;
         transform: none;
         left: 0;
-        top: 30%;
+        top: 20%;
     }
     
     /* NavBar */
