--- a/style.css
+++ b/style.css
@@ -788,7 +788,7 @@ body{
     #nav ul{
         /* background-color: tomato; */
         display: flex;
-        justify-content: space-evenly;
+        justify-content: space-between;
         float: none;
         
     }
