--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ body{
     padding: 0;
     overflow-x: hidden;
 }
+body h1{
+    font-weight: 600;
+}
+
 
 
 #nav{
@@ -243,7 +247,7 @@ body{
 }
 .midContent p{
     
-    font-size: 0.8em;
+    font-size: 2vw;
     line-height: 130%;
 }
 
@@ -268,7 +272,7 @@ body{
     display: grid;
 }
 #imageline2{
-    font-size: 2em;
+    font-size: 4vw;
     font-weight: 500;
 }
 
@@ -809,7 +813,7 @@ body{
 
     /* Top Container */
     .topContainer{
-        height: min-content;
+        height: min-content;  
     }
     .topContainer img{
         height: 100%;
@@ -818,6 +822,9 @@ body{
     .topContainer h1{
         /* font-size: 10vw; */
         line-height: 0
+    }
+    .topContainer .content p{
+        font-size: 3.6vw;
     }
 
     .whiteCircle{
@@ -888,7 +895,7 @@ body{
     .midContent{
         padding: 0;
         grid-area: box1;
-        font-size: 19px;
+        font-size: 3.8vw;
         display: grid;
     }
 
@@ -901,6 +908,8 @@ body{
     .midContent p{
         align-self: center;
         justify-self: center;
+        line-height: 150%;
+        font-size: 3.8vw;
     }
 
     .midImage{
@@ -934,6 +943,10 @@ body{
         margin-left: 12vw;
         margin-right: 4vw;
     }
+    #imageline2{
+        font-size: 6vw;
+        font-weight: 500;
+    }
     .midAddress{
         grid-area: box3;
         grid-template-rows: auto auto;
@@ -953,6 +966,7 @@ body{
         margin: 0;
         margin-left: 12vw;
         margin-right: 6vw;
+        
     }
     
     #midAddresscontent{
@@ -963,6 +977,7 @@ body{
         grid-area: txt;  
 
         margin-right: auto;
+        line-height: normal;
     }
 
 
